--- a/circle.yml
+++ b/circle.yml
@@ -19,6 +19,7 @@ dependencies:
     - rm -rf "$PROJECT_PARENT_PATH"
     - mkdir -p "$PROJECT_PARENT_PATH"
     - mv "$HOME/$CIRCLE_PROJECT_REPONAME" "$PROJECT_PATH"
+    - cd "$PROJECT_PATH" && make get_tools && make get_vendor_deps
   post:
     - go version
     - docker version
@@ -30,7 +31,6 @@ test:
       if [ "$CIRCLE_BRANCH" == "master" ] || [ "$CIRCLE_BRANCH" == "develop" ]; then
         cd "$PROJECT_PATH" && set -o pipefail && make test_integrations 2>&1 | tee test_integrations.log
       else
-        cd "$PROJECT_PATH" && make get_tools && make get_vendor_deps
         cd "$PROJECT_PATH" && set -o pipefail && bash test/test_cover.sh
       fi 
     - cd "$PROJECT_PATH" && make metalinter
